# mae3d-opencell

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/opencell/: opencell_2d.yaml  opencell_2d_cross_attention_clip_kfold.yaml  opencell_2d_cross_attention_fft_kfold.yaml  opencell_2d_fov.yaml  opencell_3d.yaml  opencell_3d_cross_attention.yaml  opencell_3d_cross_attention_clip.yaml  opencell_3d_cross_attention_clip_kfold.yaml  opencell_3d_cross_attention_concat.yaml  opencell_3d_cross_attention_distill.yaml  opencell_3d_cross_attention_distill_scratch.yaml  opencell_3d_cross_attention_fft.yaml  (+36 more)
src/: TRAINER_README.md  benchmark_mae2d_vs_mae3d.py  create_kfold_esm2_embeddings.py  create_subcell_kfold_embeddings.py  evaluate_abundance.py  evaluate_localization.py  evaluate_localization_slices.py  evaluate_localization_subcell.py  evaluate_localization_wtc.py  evaluate_ppi.py  evaluate_ppi_bootstrap.py  evaluate_ppi_bootstrap_subcell.py  evaluate_ppi_crossval.py  evaluate_ppi_metric.py  evaluate_ppi_metric_emb.py  evaluate_ppi_subcell_kfold.py  extract_embeddings_2d.py  extract_embeddings_3d.py  extract_embeddings_3d_cross_attention.py  extract_esm2_embeddings.py  extract_mae3d_embeddings.py  extract_mae_embeddings.py  extract_mae_embeddings_wtc.py  extract_mae_embeddings_wtc_opencell_pretrain.py  plot_mask_ratio_comparison.py  plot_ppi_miccai.py  plot_umap_from_embeddings.py  preprocess_subcell_pca.py  preprocess_subcell_pca_wtc.py  test_caching.py  test_localization_setup.py  test_mae2d_pipeline.py  train_abundance.py  train_fov.py  train_localization.py  train_localization_fusion.py  train_localization_slices.py  train_localization_subcell.py  train_localization_wtc.py  train_mae2d_cross_attention_clip_opencell.py  (+23 more)
(+115 files in other folders)
